syntax = "proto3";

package service.ourchat;

import "service/ourchat/download/download.proto";
import "service/ourchat/get_account_info/get_account_info.proto";
import "service/ourchat/msg_delivery/msg_delivery.proto";
import "service/ourchat/session/session.proto";
import "service/ourchat/set_account_info/set_account_info.proto";
import "service/ourchat/upload/upload.proto";
import "service/ourchat/unregister/unregister.proto";

service OurChatService {
  rpc Unregister(service.ourchat.unregister.UnregisterRequest) returns (service.ourchat.unregister.UnregisterResponse);

  rpc GetInfo(service.ourchat.get_account_info.GetAccountInfoRequest) returns (service.ourchat.get_account_info.GetAccountInfoResponse);

  rpc SetSelfInfo(service.ourchat.set_account_info.SetSelfInfoRequest) returns (service.ourchat.set_account_info.SetAccountInfoResponse);

  rpc SetFriendInfo(service.ourchat.set_account_info.SetFriendInfoRequest) returns (service.ourchat.set_account_info.SetAccountInfoResponse);

  rpc FetchMsgs(service.ourchat.msg_delivery.FetchMsgRequest) returns (stream service.ourchat.msg_delivery.Msg);

  rpc MsgDelivery(stream service.ourchat.msg_delivery.SendMsgRequest) returns (stream service.ourchat.msg_delivery.SendMsgResponse);

  rpc Upload(stream service.ourchat.upload.UploadRequest) returns (service.ourchat.upload.UploadResponse);

  rpc Download(service.ourchat.download.DownloadRequest) returns (stream service.ourchat.download.DownloadResponse);

  rpc NewSession(service.ourchat.session.NewSessionRequest) returns (service.ourchat.session.NewSessionResponse);
}
